# ConversationalCommerce

./: .dependency-cruiser.js  .eslintrc.json  .gitignore  AI_AGENT_CONFIG.md  CHANGELOG.md  CLEAN_SOFTWARE.md  CODING_RULES.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DESIGN_GUIDELINES.md  README.md  alembic.ini  docker-compose.yml  eslint.config.js  fix_file_casing.py  fix_file_casing.sh  fix_file_casing_direct.sh  fix_imports.sh  fix_nextjs_issues.sh  fix_remaining_types.sh  fix_typescript_issues.sh  package-lock 2.json  package-lock.json  package.json  pyproject.toml  railway.toml  tsconfig.json  tsconfig.tsbuildinfo
.github/: CODEOWNERS
.husky/: pre-commit
admin-dashboard/: .eslintrc.json  DEPLOYMENT.md  README.md  deploy-vercel.sh  deploy.sh  env.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
alembic/: env.py
backend/: BACKEND_CODING_STANDARDS.md  DEEP_CODE_ANALYSIS.md  Dockerfile  README.md  __init__.py  alembic.ini  asgi.py  clean_start.py  download_nlp_models.py  env.development  env.production  env.uat  fix_imports.py  pytest.ini  pytest.out  railway.json  requirements.txt  reset_migrations.py  server.py  test_migration_validation.py  test_minimal_server.py  test_models.py  wsgi.py
docs/: ADMIN_DASHBOARD_DEPLOYMENT.md  ADMIN_FEATURES_GUIDE.md  ADMIN_UI_COMPARISON.md  AI_AGENT_CONFIG.md  API_CONTRACT_SPECIFICATIONS.md  API_MOBILE_OPTIMIZATION.md  AUTHENTICATION_ARCHITECTURE.md  AUTHENTICATION_FLOW_COORDINATION.md  BACKEND_CODING_STANDARDS.md  CHANGELOG.md  CLEAN_SOFTWARE.md  CONTRIBUTING.md  DATABASE.md  (+34 more)
(+1446 files in other folders)
